--- a/hospital/templates/hospital/index.html
+++ b/hospital/templates/hospital/index.html
@@ -86,7 +86,7 @@
                             <h5 class="card-title">Ambulance Service</h5>
                   
                         </div>
-                    </div>
+                    <!-- </div>
                 </div>
                 <div class="col-12 col-sm-6 col-md-4 col-lg-2 mb-4">
                     <div class="card">
@@ -96,7 +96,7 @@
                   
                         </div>
                     </div>
-                </div>
+                </div> -->
                 <div class="col-12 col-sm-6 col-md-4 col-lg-2 mb-4">
                     <div class="card">
                         <img src="{% static 'images/public health service.png' %}" class="card-img-top" alt="publichealthservice 3">
