--- a/hospital/templates/hospital/aboutus.html
+++ b/hospital/templates/hospital/aboutus.html
@@ -2,5 +2,13 @@
 {% block title %} About Us {% endblock %}
 {% block content %} 
 <h3> About us</h3>
-<p> This is about us.</p>
+<pre>
+    Swagatam
+Seeking a noble cause, our founders developed this software so as to be of assisstance to hospitals around Nepal.We are committed to service of people andare always oriented towards people's beneficiaries. We thrive for excellence.
+Namskar
+
+
+
+</pre>
+
 {% endblock %}
