--- a/hospital/templates/hospital/add_service.html
+++ b/hospital/templates/hospital/add_service.html
@@ -1,28 +1,30 @@
-{% extends "hospital/base.html"%}
-{% block title %}add_Doctor{% endblock %}
+{% extends "hospital/base.html" %}
+{% block title %}Add Service{% endblock %}
 {% block content %}
 <br>
-<body>
-    <div class="container">
-    <h1>Add doctor</h1>
+<div class="container">
+    <h1>Add Service</h1>
     <form method="post">
-        {% csrf_token %}        
-        <label for="patient_id">Patient ID:</label>
-        <input type="number" id="patient_id" name="patient_id" required><br>
-        
+        {% csrf_token %}
+
+        <label for="patient">Patient:</label>
+        <select id="patient" name="patient_id" required>
+            {% for patient in patients %}
+            <option value="{{ patient.patient_id }}">{{ patient.first_name }} {{ patient.last_name }} ({{ patient.patient_id }})</option>
+            {% endfor %}
+        </select>
+        <br><hr>
+
         <label for="service_name">Service Name:</label>
         <input type="text" id="service_name" name="service_name" required><br>
-        
+
         <label for="service_description">Service Description:</label>
         <textarea id="service_description" name="service_description" required></textarea><br>
-        
+
         <label for="service_total">Service Total:</label>
         <input type="number" step="0.01" id="service_total" name="service_total" required><br>
-        
+
         <button type="submit">Add Service</button>
     </form>
 </div>
-</body>
-
-{% endblock %} 
-    
+{% endblock %}
