--- a/hospital/templates/hospital/show_patients.html
+++ b/hospital/templates/hospital/show_patients.html
@@ -4,28 +4,8 @@
 <body>
     <h1>Patients List</h1>
    
-    <style>
-        table {
-            border-collapse: collapse;
-            width: 100%;
-        }
-        th, td {
-            border: 1px solid black;
-            padding: 8px;
-            text-align: left;
-        }
-        th {
-            background-color: #f2f2f2;
-        }
-        tr:nth-child(even) {
-            background-color: #f2f2f2;
-        }
-        tr:hover {
-            background-color: #ddd;
-        }
-    </style>
     
-    <table>
+    <table id ="hospital" >
         <thead>
             <tr>
                 <th>Patient Id</th>
